Cleaning sonar